--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 <h1>Login</h1>
 
 <ul>
-{{#providers}}
-<li><a href="?provider={{.}}">Login with {{.}}</a></li>
-{{/providers}}
+{{#each providers}}
+<li><a href="?provider={{@key}}">Login with {{this.name}}</a></li>
+{{/each}}
 </ul>
